--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "nodemon ./public/index.js",
     "build": "tsc",
     "postinstall": "tsc",
+    "lint": "npx eslint --ext .ts src/",
+    "lint:tests": "npx eslint --ext .ts spec/",
     "dev":  "nodemon ./public/index.js",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "git add . && git commit -m Heroku && git push heroku main"
     },
   "private": true,
   "dependencies": {
