--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "postinstall": "tsc",
     "lint": "npx eslint --ext .ts src/",
     "lint:tests": "npx eslint --ext .ts spec/",
-    "dev":  "nodemon ./public/index.js",
-    "test": "jest",
+    "dev": "nodemon ./public/index.js",
+    "test": "NODE_ENV=test npx jest --verbose --runInBand",
     "deploy": "git add . && git commit -m Heroku && git push heroku main"
-    },
+  },
   "private": true,
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "@types/node": "^20.11.16",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "fastify": "^4.25.2",
     "joi": "^17.12.1",
+    "nanoid": "^3.3.7",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   }
 }
